details-icon & content typog

--- a/index.html
+++ b/index.html
@@ -603,11 +603,15 @@
                 <!-- BODY ITEMS = ICON + H3 + P + LINK -->
                 <details class="details">
 
-                  <summary>front-end qualifications</summary>
+                  <summary>front-end qualifications
+                    <img class="details-icon" src="icons/solid/icons8-freecodecamp-48-dark.png" height="48" width="48" alt="free-code-camp icon">
+                  </summary>
 
                   <div class="details-content">
 
-                    <h3 class="details-content-title">freeCodeCamp</h3>
+                    <h3 class="details-content-title">freeCodeCamp <br> 
+                      <span>(online learning platform )</span>
+                    </h3>
                     <p>Certificate in Responsive Web Design.</p>
                     <a class="details-content-link" title="Responsive Web Design certificate"
                       href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
