html: details icons & css: details icons style

--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
               <div class="article-body">
 
                 <!-- BODY ITEMS = ICON + H3 + P + LINK -->
+                <!-- FCC DETAILS -->
                 <details class="details">
 
                   <summary>front-end qualifications
@@ -624,35 +625,77 @@
 
                 </details>
 
-                <div class="body-item">
-                  <i class="fa-solid fa-user-graduate"></i>
-                  <h3 class="body-item-title">University of Pretoria</h3>
-                  <p>BPolSci International Relations.</p>
-                  <a href="https://www.up.ac.za/" target="_blank">
-                    <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
-                      alt="right button icon" class="icon">
-                    www.up.ac.za/</a>
-                </div>
+                <!-- UP DETAILS -->
+                <details class="details">
 
-                <div class="body-item">
-                  <i class="fa-solid fa-graduation-cap"></i>
-                  <h3 class="body-item-title">International School of South Africa</h3>
-                  <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
-                  <a href="https://www.issa.co.za/" target="_blank">
-                    <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
-                      alt="right button icon" class="icon">
-                    www.issa.co.za</a>
-                </div>
+                  <summary>tertiary education
+                    <img class="details-icon" src="icons/solid/icons8-graduate-48-dark.png" height="48" width="48" alt="graduate icon">
+                  </summary>
 
-                <div class="body-item">
-                  <i class="fa-solid fa-headset"></i>
-                  <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
-                  <p>Customer Care Agent.</p>
-                  <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">
-                    <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
-                      alt="right button icon" class="icon">
-                    www.labour.gov.za</a>
-                </div>
+                  <div class="details-content">
+
+                    <h3 class="details-content-title">University of Pretoria <br> 
+                      <span>(2011-2014)</span>
+                    </h3>
+                    <p>BPolSci International Relations.</p>
+                    <a class="details-content-link" title="University of Pretoria"
+                      href="https://www.up.ac.za/"
+                      target="_blank">
+                      <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
+                        alt="right button icon" class="icon">
+                        https://www.up.ac.za/</a>
+
+                  </div>
+
+                </details>
+
+                <!-- UP DETAILS -->
+                <details class="details">
+
+                  <summary>secondary education
+                    <img class="details-icon" src="icons/solid/icons8-diploma-48-dark.png" height="48" width="48" alt="diploma icon">
+                  </summary>
+
+                  <div class="details-content">
+
+                    <h3 class="details-content-title">ISSA<br> 
+                      <span>(International School of South Africa)</span>
+                    </h3>
+                    <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
+                    <a class="details-content-link" title="ISSA"
+                      href="https://www.issa.co.za/"
+                      target="_blank">
+                      <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
+                        alt="right button icon" class="icon">
+                        www.issa.co.za</a>
+
+                  </div>
+
+                </details>
+
+                <!-- LABOUR DETAILS -->
+                <details class="details">
+
+                  <summary>work experience
+                    <img class="details-icon" src="icons/solid/icons8-headphone-48-dark.png" height="48" width="48" alt="headphone icon">
+                  </summary>
+
+                  <div class="details-content">
+
+                    <h3 class="details-content-title">Compensation Fund<br> 
+                      <span>(Department of Labour)</span>
+                    </h3>
+                    <p>Customer Care Agent.</p>
+                    <a class="details-content-link" title="Compensation fund"
+                      href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx"
+                      target="_blank">
+                      <img src="icons/outline/icons8-right-button-48-dark.png" height="48" width="48"
+                        alt="right button icon" class="icon">
+                        www.labour.gov.za</a>
+
+                  </div>
+
+                </details>
 
               </div>
 
